ingress.ngrok.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ngrok"
  labels:
    # Timestamp used in order to force reload of the secret
    last_updated: "1494099933"
spec:
  tls:
  - hosts:
    - ngrok.fervid.us
    secretName: letsencrypt-certs
  rules:
  - host: ngrok.fervid.us
    http:
      paths:
      # The * is needed so that all traffic gets redirected to the nginx box
      - path: /*
        backend:
          serviceName: ngrok
          servicePort: 4040
      # We could add a /.well-known/* route here and redirect to the job directory
      # but our job does not have a health route
